# herox

./: .npmignore  Cargo.toml  package-lock.json  package.json  readme.md
.github/workflows/: CI.yml
.rust-analyzer/: config.json
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm-musleabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-riscv64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: global_listener.rs  image.rs  keyboard.rs  lib.rs  mouse.rs  native_api.rs  position.rs  window.rs
src/global_listener/: unsupported_backend.rs  windows_backend.rs
src/native_api/: windows_backend.rs  x11_backend.rs
src/window/: unsupported_backend.rs  windows.rs  windows_backend.rs  windows_native.rs  x11_backend.rs
test/: index.test.ts
