[package]
edition = "2021"
name = "herox_lib"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
enigo = "0.5.0"
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
rand = "0.9.1"
xcap = "0.6.1"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
