[package]
edition = "2021"
name = "herox_lib"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
enigo = "0.5.0"
napi = { version = "3.1.2", default-features = false, features = ["napi4"] }
napi-derive = "3.1.1"
rand = "0.9.1"
image = "0.25.1"
once_cell = "1.19.0"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.13.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
